--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "@types/react": "^18.0.9",
       "@types/react-dom": "^18.0.4",
       "@types/react-helmet": "^6.1.5",
+      "clsx": "^1.1.1",
       "node-sass": "^7.0.1",
       "react": "^18.0.0",
       "react-dom": "^18.0.0",
